Sync all content

--- a/content/resources/17-41s18.md
+++ b/content/resources/17-41s18.md
@@ -4,10 +4,11 @@ description: ''
 file: /courses/17-41-introduction-to-international-relations-spring-2018/ac722b6a658bab89f3ad6c1a5813952f_17-41s18.jpg
 file_size: 20848
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
-  caption: The United Nations Headquarters in New York City. (Image courtesy of {{%
-    resource_link "227bb435-0481-4992-b100-74d3248a3d57" "oriol04" %}} on flickr.
-    License CC BY-NC-SA.)
+  caption: The United Nations Headquarters in New York City. (Image courtesy of [oriol04](https://www.flickr.com/photos/oriol04/4902656226/in/photolist-yxkcui-xHRpB7-6zmsni-2bfSYDh-wLzPUw-6NtFPA-MVAkP8-xAPBxg-dzN2Et-xTYxbn-ZSVN7m-6PHns9-4Spg1U-5wbhfP-dhkMdr-6PHfpA-6NpPUn-8vFJQX-9WFBZc-5nULcu-6PDm2v-8teoTC-4k3Zo-5h1UQr-4nAxZH-fbLux1-awLSr5-dc5VMP-bLnLUi-aRgB3-qTj6BX-7d3M7y-fbk4sF-boGZrh-9aaKo8-vQmfw-6NpwmK-czA8Yw-5sw2i2-9hcnV3-ap1DzY-4aWKLe-dMcsGR-ap1CUy-fbLv77-q1yq73-fbLtLy-czynAo-cWnCYd-fbLqWd)
+    on flickr. License CC BY-NC-SA.)
   credit: Image courtesy of orioI04 on flickr. License CC BY-NC-SA.
   image-alt: A tall glass and concrete structure fronted by the flags of various nations
     stands against a blue sky.
