--- a/content/resources/mit17_41s18_lec20a.md
+++ b/content/resources/mit17_41s18_lec20a.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/17-41-introduction-to-international-relations-spring-2018/81169a1f15b230962660e79110abfa61_MIT17_41S18_lec20a.pdf
 file_size: 276155
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
