--- a/content/resources/mit17_41s18_lec21a.md
+++ b/content/resources/mit17_41s18_lec21a.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/17-41-introduction-to-international-relations-spring-2018/defa961ce515cb3c6acedcd6760f5ab4_MIT17_41S18_lec21a.pdf
 file_size: 248254
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
