--- a/content/resources/mit17_41s18_lec17.md
+++ b/content/resources/mit17_41s18_lec17.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/17-41-introduction-to-international-relations-spring-2018/a087bd6cef7f7f56e1d448b1b7a29d18_MIT17_41S18_lec17.pdf
 file_size: 472138
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
