--- a/content/resources/mit17_41s18_lec26.md
+++ b/content/resources/mit17_41s18_lec26.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/17-41-introduction-to-international-relations-spring-2018/19135b12f040bc51373ab4a84200ee7e_MIT17_41S18_lec26.pdf
 file_size: 202368
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
